fix text truncate

--- a/src/style/blocks/article.scss
+++ b/src/style/blocks/article.scss
@@ -14,9 +14,7 @@
         font-family: $main-font;
         padding: 0 10px;        
         font-size: 18px;
-        font-weight: 600;
-        line-height: 24px;
-        letter-spacing: 0em;        
+        font-weight: 600; 
         border-bottom: 0.4px dashed  rgba(0, 0, 0, 0.5);
         height: 55px;
         display: flex;
@@ -26,8 +24,7 @@
         @include tablet{            
             font-size: 15px;
             height: 70px;
-        }
-      
+        }      
     }
     &__text{
         font-family: $second-font;
